# imago

./: .env.example  .gitignore  README.md  README.zh.md  pyproject.toml
docs/: spec.md
extensions/imago/: index.ts  openclaw.plugin.json  package.json
src/imago/: __init__.py  app.py  config.py  models.py  security.py
src/imago/engine/: generator.py  queue.py  worker.py
src/imago/output/: manager.py
src/imago/prompt/: factory.py  styles.py
src/imago/prompt/templates/: cinematic.yaml  editorial.yaml  finance_editorial.yaml  product.yaml  social_cover.yaml  tech_illustration.yaml
src/imago/routes/: generate.py  tasks.py
tests/: conftest.py  test_config.py  test_engine.py  test_img2img.py  test_output.py  test_prompt.py  test_queue.py  test_routes.py  test_security.py  test_webhook.py
